--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@kznjunk/paperboy-slack": "^1.0.1",
+    "@slack/web-api": "^6.2.3",
+    "axios": "^0.21.1",
+    "dotenv": "^9.0.2",
+    "node-cron": "^3.0.0"
+  }
 }
